--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
+# These are essentially role parameters
 autologic_manage_groups: true
 autologic_manage_users: true
 autologic_manage_sshkeys: true
+
 autologic_groups: []
 autologic_users: []
 
