--- a/tasks/users_department_pattern.yml
+++ b/tasks/users_department_pattern.yml
@@ -2,21 +2,23 @@
 
 - name: Add the system users (department pattern)
   user:
-    name: "{{item.value.username}}"
-    state: "{{item.value.state|default('present')}}"
-    system: "{{item.value.system|default(false)}}"
-    comment: "{{item.key}}"
-    uid: "{{item.value.uid|default(omit)}}"
-    home: "{{item.value.home|default(omit)}}"
-    groups: "{{item.value.groups|default(omit)|join(',')}}"
-  with_dict: autologic_users
+    name:     "{{item.value.username}}"
+    state:    "{{item.value.state|default('present')}}"
+    system:   "{{item.value.system|default(false)}}"
+    comment:  "{{item.key}}"
+    uid:      "{{item.value.uid|default(omit)}}"
+    home:     "{{item.value.home|default(omit)}}"
+    groups:   "{{item.value.groups|default(omit)|join(',')}}"
+    remove:   "{{item.value.remove|default(false)}}"
+    force:    "{{item.value.force|default(false)}}"
+  with_dict:  autologic_users
   when: item.value.department in autologic_department_access
 
 - name: Add user SSH (public) keys (department pattern)
   authorized_key:
-    user: "{{item.0.username}}"
-    key: "{{item.1}}"
-    state: 'present'
+    user:     "{{item.0.username}}"
+    key:      "{{item.1}}"
+    state:    'present'
   with_subelements:
     - autologic_users
     - sshkeys
