#5: cleaning up test and adding a new one. It seems the removing the user makes it difficult to add an SSH key, so I should probably check for that ;-)

--- a/tasks/users_department_pattern.yml
+++ b/tasks/users_department_pattern.yml
@@ -22,4 +22,4 @@
   with_subelements:
     - autologic_users
     - sshkeys
-  when: autologic_manage_sshkeys == true and item.0.department in autologic_department_access
+  when: autologic_manage_sshkeys and item.0.department in autologic_department_access and item.0.state == 'present'
