--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -17,7 +17,7 @@
   authorized_key:
     user:   "{{item.0.username}}"
     key:    "{{item.1}}"
-    state:  'present'
+    state:  "{{item.0.state|default('present')}}"
   with_subelements:
     - autologic_users
     - sshkeys
