--- a/tasks/users_department_pattern.yml
+++ b/tasks/users_department_pattern.yml
@@ -18,7 +18,7 @@
   authorized_key:
     user:     "{{item.0.username}}"
     key:      "{{item.1}}"
-    state:    "{{item.0.state}}"
+    state:    "{{item.0.state|default('present')}}"
   with_subelements:
     - autologic_users
     - sshkeys
