--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,10 +4,11 @@ autologic_manage_groups: true
 autologic_manage_users: true
 autologic_manage_sshkeys: true
 
-autologic_groups: []
-autologic_users: []
+autologic_system_groups: []
+autologic_system_users: []
 
 # See README for more details about the
 # department pattern.
 autologic_department_pattern: false
 autologic_department_access: []
+autologic_user_access: []
