--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - include: groups.yml
-  when: autologic_manage_groups
+  when: autologic_manage_users
   tags: autologic_users_play_groups
 
 - include: users.yml
