Added in support for sudo (passwordless, if desired) access to a root shell. It is basic functionality, but it is good enough for probably 80% of use cases.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 autologic_manage_groups: true
 autologic_manage_users: true
 autologic_manage_sshkeys: true
+autologic_manage_sudo: true
 
 # autologic_system_groups: []
 autologic_system_users: []
@@ -12,3 +13,9 @@ autologic_system_users: []
 autologic_department_pattern: false
 autologic_department_access: []
 autologic_user_access: []
+
+# Sudoers related params
+autologic_super_departments_nopasswd: true
+autologic_super_departments: []
+autologic_super_users_nopasswd: true
+autologic_super_users: []
