--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,3 +12,6 @@
   when: autologic_manage_users and autologic_department_pattern
   tags: autologic_users_play_users
 
+- include: sudo.yml
+  when: autologic_manage_sudo
+  tags: autologic_users_play_sudo
